--- a/_posts/2016-05-01-age.md
+++ b/_posts/2016-05-01-age.md
@@ -7,7 +7,7 @@ category:
 
 Age doesn't and shouldn't define you. 
 
-Age is a metric for classified probabilities. For example, in the US education system, a typical 5 year old is in kindergarten learning the alphaebt. A typical 10 year old is in 5th grade learning about the country's great history and writing short essays. A typical 40 year old probably shouldn't stay up all night drinking and plan on going into work bright and early the next day.
+Age is a metric for classified probabilities. For example, in the US education system, a typical 5 year old is in kindergarten learning the alphabet. A typical 10 year old is in 5th grade learning about the country's great history and writing short essays. A typical 40 year old probably shouldn't stay up all night drinking and plan on going into work bright and early the next day.
 
 That is to say, while there are correlations, it's not causation.
 
