--- a/_posts/2016-04-29-friday.md
+++ b/_posts/2016-04-29-friday.md
@@ -4,6 +4,7 @@ title:  5 Bullet Friday
 description: front end web development with haskell
 date:   2016-04-29 15:31:51
 tags: reflex, haskell
+category: 5BF
 ---
 
 Things that I learn about Haskell (and specifically front end web development with ReflexFRP) this week:
