--- a/_posts/2016-04-29-friday.md
+++ b/_posts/2016-04-29-friday.md
@@ -18,7 +18,7 @@ Things that I learn about Haskell (and specifically front end web development wi
     {% highlight haskell %}
     let h = "Hello World"
     x <- elClass "div" "stylename" $ text h {% endhighlight %}
-* If your Aeson hookup returns `Nothing`, double check the type definitions because variables may have been mispelled or needs to be a Maybe type (JSON can sometimes pass an empty string or null value. I [blogged about][2] this experience last year, but didn't realize that mispelled variables names gives the same error!
+* If your Aeson hookup returns `Nothing`, double check the type definitions because variables may have been misspelled or needs to be a Maybe type (JSON can sometimes pass an empty string or null value. I [blogged about][2] this experience last year, but didn't realize that misspelled variables names gives the same error!
 * In a do block of haskell code, you don't have to explicitly define variable names for the last thing returned.
     {% highlight haskell %}
     a <- elDiv "parent" $ do 
@@ -28,7 +28,7 @@ Things that I learn about Haskell (and specifically front end web development wi
     elDiv "parent" $
         dynText a {% endhighlight %}
 
-*Acknowledgements*
+*Acknowledgments*
 
 *Many thanks for the Haskell engineers of a local haskell shop, [Obsidian Systems][4] for leading the [Haskell Workshop][3] on web development and also being available and encouraging when I ask naively-based questions.*
 
