--- a/_posts/2016-05-04-spiral.md
+++ b/_posts/2016-05-04-spiral.md
@@ -79,8 +79,8 @@ def change(index):
 turn d = case d of
   Up -> Right'
   Down -> Left'
-  Right -> Down
-  Left -> Up
+  Right' -> Down
+  Left' -> Up
 {% endhighlight %}
 
 With these utility functions I can go ahead and think about how to keep track of the steps taken. What I want to do with the (x,y) coordinates is figure out when to turn, thus will have to track the goals for the step. So far I have this much written out, for recursively taking steps until the specified number *n*. I still need to track the step goal for the level so that directions can be specified.
