--- a/_posts/2016-05-04-spiral.md
+++ b/_posts/2016-05-04-spiral.md
@@ -16,7 +16,7 @@ One of my goals is to write Haskell at a decent pace, but am still much more flu
 
 I drew a pretty diagram to show how it looks like graphically.
 
-![](assets/img/spiral1.png)
+![](/5min/assets/img/spiral1.png)
 
 In order to track both the direction and number of steps in that direction, I used two loops. One for the number of steps taken, and one for number of steps taken in a direction. I also created a couple of utility functions (see below) that handle the repetitive steps such as `move(coordinates, direction)` and `change(direction)`. The additional goals in writing the solution is to make it more readable and easier to maintain, and splitting out these functions makes the spiral function eaiser to digest. Here's how my solution looks with while loops:
 
