--- a/_posts/2016-05-07-ispell.md
+++ b/_posts/2016-05-07-ispell.md
@@ -46,7 +46,7 @@ When deciding between ispell and aspell, the [ispell][3] docs suggest:
 
 *[Aspell][4] is a spelling checker written by Kevin Atkinson. Its primary advantage is that it is better at making suggestions when a word is seriously misspelled. For example, when given "trubble", ispell will suggest only "rubble", where aspell suggests "trouble" (as its first choice" as well as "dribble", "rubble", and a lot of other words. Its disadvantage is that the approximate-matching algorithm is specific to English.*
 
-I haven't figured out how to switch from ispell to aspell yet, but it looks like [spacemacs prioritizes aspell by default][6]. when I do I'm looking into this auto-completion menu as well ([emacs-ac-ispell][5])
+I haven't figured out how to switch from ispell to aspell yet, but it looks like [spacemacs prioritizes aspell by default][6]? I'm also looking into this auto-completion menu as well ([emacs-ac-ispell][5])
 
 ![autocomplete](https://lh3.googleusercontent.com/Njz5klr7_Iip6dS_gUQIUxbL_jIZn1lhibow-W02wyNwCjXuY5semvHnB0zgbIMDBU_2YQvZgUX2fnylsRJgKpMqnfD_cSOUQ0MOUFmStRl0yyvvzpWph61bxlFW5iyqcPi776vfZQ8PtlWClPm-cA7UL_dVAAwwXuMe6Dqv1t7CY8YL0QMEqQRsvmpJqXdk2nAzeSVI57_bAVbRWWAvh3ufV9EiPlAjzP8PSaGyUZ4oivtyujJm3wOv8KbEBSA3IapvbqCoVf6tVDN6TFdbtvRZV7MrozdvcwOJV47bXoh00t90Ncr5XgvhnafAb3H-g2EImYjcTzqqYDDHJngSlfqi2XuaMp4GKnEEL22sJzSBD6uzjjZtWCR5kT63dMEwe7pXRcQ7izZbFIW7hyCaoEoHGbQpxlzc_HxKpfYQj6EfOsofeF-MHI9hjIV5k-9FgwGtWMyVJ3Frt6yWkzyquGqVPow38NB66Urv3Pubf0Qcr_X-JrUvmiaxD_qhRQ1R9E2HT-ZHnYV8X91JRTbs7U54c1xJHnPOp-29lh3FO9TSNQnILBD6sAoVOkn8bhfESu2oT9JrqYYtogj5YBaGpA8_Q_M6KOkB=w594-h404-no)
 
