--- a/_posts/2016-06-28-2-months-in.md
+++ b/_posts/2016-06-28-2-months-in.md
@@ -8,7 +8,7 @@ category:
 
 Today I was [asked about my design work on ReflexFRP.org](http://katychuang.me/blog/2016-05-15-reflexfrp.html) and well regrettable its progress is delayed<sup>1</sup>. I'm glad there is interest in the open source work though I wonder if finding my blog a month and half after it was published was a matter of having claimed [my feed on bloglovin](https://www.bloglovin.com/blogs/katychuangme-16206477) and SEO remarkably improved.
 
-Regardless, that speculation is neither here nor there. I remembered that I haven't posted here in a while, I should. Checked how long I've been posting here, 2 months ago this day that I started though didn't even last a full month of daily posts: (1) keep a regular daily schedule in includes this blog, and (2) keep posts short and quick to publish<sup>2</sup>. Perhaps the daily schedule was aiming too high even with 5 mins? :sweat_smile: 
+Regardless, that speculation is neither here nor there. I remembered that I haven't posted here in a while, I should. Checked how long I've been posting here, 2 months ago this day that I started though didn't even last a full month of daily posts: (1) keep a regular daily schedule that includes writing for this blog, and (2) keep posts short and quick to publish<sup>2</sup>. Perhaps the daily schedule was aiming too high even with 5 mins? :sweat_smile: 
 
 I didn't anticipate how much time it can be to commit to being a performer in NYC but also I've been told that this year the interest in Polynesian themes increased dramatically so there are more show requests. Spring and Summer in NYC means lots of festivals and being one of the few Polynesian dance group [Lei Pasifika](http://leipasifika.com) here in NYC means we are often called to perform often during warm seasons. Especially for the Tahitian style we specialize in. Each performance has an overhead for rehearsing choreography and formations as well as preparing costumes.... so trying to find ways to streamline that process. I enjoy being around these high-energy peoples despite their different ways of thinking and doing things :grin:
 
