--- a/_posts/2017-03-24-dataviz.md
+++ b/_posts/2017-03-24-dataviz.md
@@ -61,7 +61,7 @@ The JSON data is saved into the variable data,which is a list of dictionaries, s
 
 The next step is to save this data for analysis. We could save it into a text file. We could save it into a database. Since this is a small amount of data (n=46), I chose to iterate quickly on developing the code by loading the JSON response directly into a Python dataframe.
 
-Let's see what happens when we use parse the timestamps:
+Let's see what happens when we `parse` the timestamps:
 
 ```python
 import datetime
