--- a/_posts/2016-11-26-newtheme.md
+++ b/_posts/2016-11-26-newtheme.md
@@ -4,8 +4,12 @@ title: New Theme
 date: 2016-11-26 21:56
 tags: theme
 category: 
+share: none
 ---
 
-Writing about something
-
 Using the theme [The Plain](https://github.com/heiswayi/the-plain) . 
+
+With this, I'm re-branding from the original placeholder **5min** to **Macbook and Heels**, to combine efforts on two projects and streamlining the time spent outside of work.
+
+Always trying to find ways to accomplish things, since with work, volunteer, and dance my plate is constantly overfilled.
+
