--- a/_posts/2017-03-24-dataviz.md
+++ b/_posts/2017-03-24-dataviz.md
@@ -8,9 +8,7 @@ category: tutorial
 
 The past week I was working on a data visualization project. First, I prototyped it in Python (later rewritten in Haskell). The first couple of days, I spent the whole weekend setting up my computer with the right libraries and fixing installation errors. Was also learning to connect with the [Facebook Graph API][1]. Finally towards the end of the weekend I was able to move beyond devops-y things like setup and configs to finally make progress with actual coding.
 
-The goal of the exercise was to connect with Facebook Graph Api to collect information about my most recent posts, and see how my posting activity looks like.
-
-
+The goal of the exercise was to connect with Facebook Graph Api to collect information about my most recent posts, and [see how my posting activity looks like][^1]. 
 
 ![Screenshot](https://c1.staticflickr.com/3/2944/32815168073_c2b39b1eef_c.jpg)
 
@@ -25,8 +23,8 @@ The code below will be in Python, and also available as an ipython notebook view
 ## Setup
 
 - [Register for a facebook API and get your access token][2].
-- I first created a virtual environment specifically for this notebook: `mkvirtualenv --python=/usr/local/bin/python3 dataAnalysis`
-- Then installed the notebook server to the machine. Instructions can be [found here][3]
+- I first created a virtual environment specifically for this project: `mkvirtualenv --python=/usr/local/bin/python3 dataAnalysis` and [installed these libraries][^2]
+- Then installed the **Jupyter** notebook server to the machine. Instructions can be [found here][3]
 - Start server in the project's root directory, jupyter notebook
 - In addition to getting the console ready, I saved my access token information in a separate local folder, `_keys` in a file name `facebook.py`. Inside you want to save a string variable like the following:
 
@@ -135,6 +133,10 @@ Don't forget that the code in this post is available as an [ipython notebook][7]
 [2]: https://developers.facebook.com/
 [3]: http://jupyter.org/install.html
 [4]: http://nbviewer.jupyter.org/github/katychuang/ipython-notebooks/blob/master/facebook_posting_activity.ipynb#Connecting-to-Facebook-API
-[5]: part 2
+[5]: http://nbviewer.jupyter.org/github/katychuang/ipython-notebooks/blob/master/facebook_posting_activity_part2.ipynb
 [6]: https://docs.python.org/3/library/datetime.html#strftime-and-strptime-behavior
 [7]: http://nbviewer.jupyter.org/github/katychuang/ipython-notebooks/blob/master/facebook_posting_activity.ipynb#Parsing-data
+
+
+[^1]: This was part of a 3 week check in on a goal to write more regularly in *any* form, as folks say it takes 21 days to adjust to new situations or start a new habit.
+[^2]: I used Python3, and installed requests, numpy, matplotlib, seaborn
