--- a/_posts/2017-03-24-dataviz.md
+++ b/_posts/2017-03-24-dataviz.md
@@ -12,6 +12,15 @@ The goal of the exercise was to connect with Facebook Graph Api to collect infor
 
 ![Screenshot](https://c1.staticflickr.com/3/2944/32815168073_c2b39b1eef_c.jpg)
 
+**Table of Contents**
+
+- [Connecting to the Facebook Graph API](#connecting-to-the-facebook-graph-api)
+  - 1. [Setup](#1-setup)
+  - 2. [Parsing JSON data and formatting time](#2-parsing-json-data-and-formatting-time)
+  - 3. [Saving data to a file](#3-saving-data-to-a-file)
+{:toc}
+
+
 ---
 
 # Connecting to the Facebook Graph API
@@ -20,7 +29,7 @@ You'll need to get an access token to download data, it's unfortunately a bit co
 
 The code below will be in Python, and also available as an ipython notebook view: [part 1][4], [part 2][5]
 
-## Setup
+## 1. Setup
 
 - [Register for a facebook API and get your access token][2].
 - I first created a virtual environment specifically for this project: `mkvirtualenv --python=/usr/local/bin/python3 dataAnalysis` and [installed these libraries][^2]
@@ -30,7 +39,7 @@ The code below will be in Python, and also available as an ipython notebook view
 
 `ACCESS_TOKEN="XXXXXX"`
 
-## Requests
+## 2. Making Requests
 
 Once all that is set up, you want to use the `requests` library to grab json data. I was able to figure out the urls to use based on the graph api explorer tool.
 
@@ -55,7 +64,7 @@ The JSON data is saved into the variable data,which is a list of dictionaries, s
 
 `print(data[0]['created_time'])`
 
-## Parsing JSON data and formatting time
+## 3. Parsing JSON data and formatting time
 
 The next step is to save this data for analysis. We could save it into a text file. We could save it into a database. Since this is a small amount of data (n=46), I chose to iterate quickly on developing the code by loading the JSON response directly into a Python dataframe.
 
@@ -83,7 +92,7 @@ Above, I selected the datetime and dateutil parser libraries. They come in the c
 
 Function *scrub* takes the timestamp (It's a string type when read from json), uses `parse()` to turn into a datetime type, then processed to find **the day of the week** and **hour of the day**. The `dow()` and `hod()` each take a `datetime` type and return a string formatted version. The time formats are explained [here][6]
 
-## Which days am I most likely to post?
+### Which days am I most likely to post?
 
 Let's try using what we learned above to answer the question, **Which days am I most likely to post on Facebook?**. Say we have a list of the days of the week, `days`.... we can use this as an index while counting through the sample, `daysIPosted2FB`. Note that `daysIPosted2FB` is a one line version of earlier code example.
 
@@ -111,7 +120,7 @@ Saturday  	 6
 Sunday  	 12
 ```
 
-## Saving data to a file
+## 4. Saving data to a file
 
 At this point, because you just learned how to collect data from json and parse it, let's save the file so that you have it as backup in case the internet breaks. :scream:
 
